Update Jogos de Cartucho do Super Nintendo Uma Viagem Nostálgica.html

--- a/Jogos de Cartucho do Super Nintendo Uma Viagem Nostálgica.html
+++ b/Jogos de Cartucho do Super Nintendo Uma Viagem Nostálgica.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="menu" id="Menu">
-    <a href="1-Página Inicial.html">Págine Inicial</a>
+    <a href="index.html">Págine Inicial</a>
     <a href="2-Posts.html">Posts</a>
     <a href="#">Projetos</a>
     <a href="#">Sobre mim</a>
