--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>IAlexYagam1I</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
         <!--cabeçalho-->
